--- a/package.json
+++ b/package.json
@@ -14,9 +14,19 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "gatsby": "^4.0.0",
+    "bootstrap": "^5.1.3",
+    "dotenv": "^10.0.0",
+    "formik": "^2.2.9",
+    "gatsby": "^4.0.1",
+    "gatsby-plugin-image": "^2.0.0",
+    "gatsby-plugin-sass": "^5.1.0",
+    "gatsby-source-prismic": "^5.0.0",
+    "prismic-reactjs": "^1.3.4",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-bootstrap": "^2.0.0",
+    "react-dom": "^17.0.1",
+    "sass": "^1.43.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "prettier": "^2.4.1"
